--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="uft-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Bezews</title>
+        <title>BEZEWS</title>
         </head>
     <body>
     </body>
